style.css
h1 {
    color: blue;
    font-size: 36px;
    border: 1px solid blue;
    padding: 0 5px 0 5px;
    background-color: white;
}

h2 {
    text-align: center;
}

.page01,
.page02,
.page03,
.page04 {
    display: flex;
    align-items: center;
    flex-direction: column;
}

img {
    width: 400px;
    height: 400px;
    border-radius: 50%;
}

footer {
    color: white;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: black;
}

.page01 {
    height: 1000px;
}

.list01 {
    font-size: 20px;
    border: 1px solid blue;
    border-radius: 10%;
    background-color: white;
    padding: 0 15px 0 5px;
}

.list02,
.list03,
.list04 {
    font-size: 20px;
    border: 1px solid blue;
    /*border-radius: 10%;*/
    background-color: white;
    padding: 15px 15px 15px 15px;
}


 

